changing directory slash

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="nav__btns">
                     <div class="flag-container" id="language-toggle">
-                        <img src="/assets/img/flagmx.png" class="flag-img" id="flag-language" alt="">
+                        <img src="assets/img/flagmx.png" class="flag-img" id="flag-language" alt="">
                     </div>
 
                     <div class="nav__toggle" id="nav-toggle">
