--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                 <div class="home__container container grid">
                     <div class="home__content grid">
                         <div class="home__social">
-                            <a href="https://www.facebook.com" target="_blank" class="home__social-icon">
+                            <a href="https://www.facebook.com/profile.php?id=61573349621899" target="_blank" class="home__social-icon">
                                 <i class="uil uil-facebook"></i>
                             </a>
-                            <a href="https://www.instagram.com" target="_blank" class="home__social-icon">
+                            <a href="https://www.instagram.com/fuegodemesquite" target="_blank" class="home__social-icon">
                                 <i class="uil uil-instagram"></i>
                             </a>
-                            <a href="https://www.tiktok.com" target="_blank" class="home__social-icon">
-                                <i class="bi bi-tiktok"></i>
+                            <a href="https://wa.me/528126043713" target="_blank" class="home__social-icon">
+                                <i class="uil uil-whatsapp"></i>
                             </a>
                         </div>
 
@@ -236,20 +236,20 @@
                             <i class="uil uil-phone contact__icon"></i>
                             <div>
                                 <h3 class="contact__title language-change" id="contact_call">Call Us</h3>
-                                <span class="contact__subtitle">111-121-212</span>
+                                <span class="contact__subtitle">+52-812-604-3713</span>
                             </div>
                         </div>
                         <div class="contact__information">
                             <i class="uil uil-envelope contact__icon"></i>                            <div>
                                 <h3 class="contact__title">Email</h3>
-                                <span class="contact__subtitle">sales@fuegomesquite.com</span>
+                                <span class="contact__subtitle">coming soon</span>
                             </div>
                         </div>
                         <div class="contact__information">
                             <i class="uil uil-map contact__icon"></i>
                             <div>
                                 <h3 class="contact__title language-change" id="contact_address">Where we at?</h3>
-                                <span class="contact__subtitle">4545 Monterrey Street, Nuevo Leon, Mexico</span>
+                                <span class="contact__subtitle">Monterrey, Nuevo Leon, Mexico</span>
                             </div>
                         </div>
                     </div>
@@ -258,20 +258,20 @@
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label language-change" id="contact_name">Name</label>
-                                <input type="text" class="contact__input">
+                                <input type="text" class="contact__input" id="contact-form-name">
                             </div>
                             <div class="contact__content">
                                 <label for="" class="contact__label">Email</label>
-                                <input type="email" class="contact__input">
+                                <input type="email" class="contact__input" id="contact-form-email">
                             </div>
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label language-change" id="contact_subject">Subject</label>
-                            <input type="text" class="contact__input">
+                            <input type="text" class="contact__input" id="contact-form-name" id="contact-form-subject">
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label language-change" id="contact_message">Message</label>
-                            <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                            <textarea name="" id="" cols="0" rows="7" class="contact__input" id="contact-form-message"></textarea>
                         </div>
 
                         <div>
@@ -307,14 +307,14 @@
                 </ul>
 
                 <div class="footer__socials">
-                    <a href="https://www.facebook.com" target="_blank" class="footer__social">
+                    <a href="https://www.facebook.com/profile.php?id=61573349621899" target="_blank" class="footer__social">
                         <i class="uil uil-facebook"></i>
                     </a>
-                    <a href="https://www.instagram.com" target="_blank" class="footer__social">
+                    <a href="https://www.instagram.com/fuegodemesquite" target="_blank" class="footer__social">
                         <i class="uil uil-instagram"></i>
                     </a>
-                    <a href="https://www.tiktok.com" target="_blank" class="footer__social">
-                        <i class="bi bi-tiktok"></i>
+                    <a href="https://wa.me/528126043713" target="_blank" class="footer__social">
+                        <i class="uil uil-whatsapp"></i>
                     </a>
                 </div>
             </div>
